Download url launcher

--- a/toonviewer/ios/Runner/Info.plist
+++ b/toonviewer/ios/Runner/Info.plist
@@ -46,6 +46,10 @@
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>https</string>
+	</array>
 	<true/>
 </dict>
 </plist>
