--- a/toonlinkers/pubspec.yaml
+++ b/toonlinkers/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.1.0
+  url_launcher: ^6.1.14
 
 
   # The following adds the Cupertino Icons font to your application.
