--- a/toonlinkers/pubspec.yaml
+++ b/toonlinkers/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   http: ^1.1.0
   url_launcher: ^6.1.14
+  shared_preferences: ^2.2.2
 
 
   # The following adds the Cupertino Icons font to your application.
