--- a/mobile-programming-lecture/personality_test/pubspec.yaml
+++ b/mobile-programming-lecture/personality_test/pubspec.yaml
@@ -59,7 +59,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - res/api/mbti.json
+    - res/api/test1.json
+    - res/api/test2.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
