feat: add list.json

--- a/mobile-programming-lecture/personality_test/pubspec.yaml
+++ b/mobile-programming-lecture/personality_test/pubspec.yaml
@@ -63,6 +63,7 @@ flutter:
     - res/api/mbti.json
     - res/api/test1.json
     - res/api/test2.json
+    - res/api/list.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
