docs: add firebase analytics

--- a/mobile-programming-lecture/personality_test/pubspec.yaml
+++ b/mobile-programming-lecture/personality_test/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: ^4.1.1
+  firebase_analytics: ^12.0.2
 
 dev_dependencies:
   flutter_test:
