doc: download firebase_remote_config

--- a/mobile-programming-lecture/personality_test/pubspec.yaml
+++ b/mobile-programming-lecture/personality_test/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^4.1.1
   firebase_analytics: ^12.0.2
+  firebase_remote_config: ^6.1.0
 
 dev_dependencies:
   flutter_test:
