--- a/mobile-programming-lecture/personality_test/macos/Runner/GoogleService-Info.plist
+++ b/mobile-programming-lecture/personality_test/macos/Runner/GoogleService-Info.plist
@@ -26,5 +26,7 @@
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:306103682715:ios:316b02143b3bfe0695a83e</string>
+	<key>DATABASE_URL</key>
+	<string>https://example-abfd2-default-rtdb.firebaseio.com</string>
 </dict>
 </plist>
