--- a/mobile-programming-lecture/my_budongsan/pubspec.yaml
+++ b/mobile-programming-lecture/my_budongsan/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_crashlytics: ^5.0.3
   firebase_ui_firestore: ^2.0.1
   connectivity_plus: ^7.0.0
+  google_maps_flutter: ^2.14.0
 
 dev_dependencies:
   flutter_test:
