--- a/mobile-programming-lecture/my_budongsan/pubspec.yaml
+++ b/mobile-programming-lecture/my_budongsan/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   firebase_ui_firestore: ^2.0.1
   connectivity_plus: ^7.0.0
   google_maps_flutter: ^2.14.0
+  dart_geohash: ^2.1.0
+  cloud_firestore: ^6.1.0
+  rxdart: ^0.28.0
 
 dev_dependencies:
   flutter_test:
@@ -64,9 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - res/images/apartnebt.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
