--- a/mobile-programming-lecture/myBudongsan/pubspec.yaml
+++ b/mobile-programming-lecture/myBudongsan/pubspec.yaml
@@ -67,7 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - res/images/apartment.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
