--- a/mobile-programming-lecture/myBudongsan/android/app/src/main/AndroidManifest.xml
+++ b/mobile-programming-lecture/myBudongsan/android/app/src/main/AndroidManifest.xml
@@ -28,8 +28,8 @@
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
-            android:name="flutterEmbedding"
-            android:value="2" />
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDPeOSz8JYp1IfgO1a1EW7iGuduf94l-9g" />
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
