--- a/mobile-programming-lecture/my_budongsan/pubspec.yaml
+++ b/mobile-programming-lecture/my_budongsan/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   firebase_ui_firestore: ^2.0.1
   connectivity_plus: ^7.0.0
   google_maps_flutter: ^2.14.0
+  dart_geohash: ^2.1.0
+  cloud_firestore: ^6.1.0
+  rxdart: ^0.28.0
 
 dev_dependencies:
   flutter_test:
