--- a/mobile-programming-lecture/classic_sound/pubspec.yaml
+++ b/mobile-programming-lecture/classic_sound/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  firebase_core: ^4.2.1
+  firebase_analytics: ^12.0.4
+  cloud_firestore: ^6.1.0
+  firebase_storage: ^13.0.4
+  path_provider: ^2.1.5
+  file_picker: ^10.3.6
 
 dev_dependencies:
   flutter_test:
