docs: add shared_preferences

--- a/mobile-programming-lecture/my_budongsan/pubspec.yaml
+++ b/mobile-programming-lecture/my_budongsan/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   dart_geohash: ^2.1.0
   cloud_firestore: ^6.1.0
   rxdart: ^0.28.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
