--- a/mobile-programming-lecture/my_budongsan/pubspec.yaml
+++ b/mobile-programming-lecture/my_budongsan/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cloud_firestore: ^6.1.0
   rxdart: ^0.28.0
   shared_preferences: ^2.5.3
+  firebase_auth: ^6.1.2
 
 dev_dependencies:
   flutter_test:
