--- a/mobile-programming-lecture/classic_sound/pubspec.yaml
+++ b/mobile-programming-lecture/classic_sound/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   file_picker: ^10.3.6
   connectivity_plus: ^7.0.0
   shared_preferences: ^2.5.3
+  firebase_auth: ^6.1.2
 
 dev_dependencies:
   flutter_test:
