build: add audio_players pkg

--- a/mobile-programming-lecture/classic_sound/pubspec.yaml
+++ b/mobile-programming-lecture/classic_sound/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   shared_preferences: ^2.5.3
   firebase_auth: ^6.1.2
   dio: ^5.9.0
+  audioplayers: ^6.5.1
 
 dev_dependencies:
   flutter_test:
