--- a/mobile-programming-lecture/classic_sound/pubspec.yaml
+++ b/mobile-programming-lecture/classic_sound/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_auth: ^6.1.2
   dio: ^5.9.0
   audioplayers: ^6.5.1
+  sqflite: ^2.4.2
 
 dev_dependencies:
   flutter_test:
