test: add package sqflite_common_ffi, sqlite3

--- a/mobile-programming-lecture/classic_sound/pubspec.yaml
+++ b/mobile-programming-lecture/classic_sound/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   dio: ^5.9.0
   audioplayers: ^6.5.1
   sqflite: ^2.4.2
+  sqflite_common_ffi: ^2.3.6
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
