--- a/mobile-programming-lecture/honeybee/pubspec.yaml
+++ b/mobile-programming-lecture/honeybee/pubspec.yaml
@@ -35,6 +35,23 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: ^4.2.1
+  firebase_analytics: ^12.0.4
+  cloud_firestore: ^6.1.0
+  firebase_storage: ^13.0.4
+  path_provider: ^2.1.5
+  file_picker: ^10.3.7
+  firebase_crashlytics: ^5.0.5
+  firebase_auth: ^6.1.2
+  firebase_app_check: ^0.4.1+2
+  firebase_ui_firestore: ^2.0.1
+  firebase_messaging: ^16.0.4
+  flutter_local_notifications: ^19.5.0
+  firebase_database: ^12.1.0
+  connectivity_plus: ^7.0.0
+  shared_preferences: ^2.5.3
+  get: ^4.7.3
+  lottie: ^3.3.2
+  image_picker: ^1.2.1
 
 dev_dependencies:
   flutter_test:
